feat: complete FounderLink codebase — all services, frontend, CI/CD, observability